2011-09-28 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/config-keys.c
    * src/gtk-event-list.c
    * src/gtk-event-list.h
    Save and restore sort information for event lists.


2011-09-25 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Fix bugs in tle-update for two line tle's at end of file.

    * ChangeLog
    * src/gtk-sat-selector.c
    * src/mod-cfg.c
    Update sort routines to include catalog number to handle ties in name.


2011-09-22 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-polar-view.c
    * src/gtk-polar-view-popup.c
    Saves polarview showtrack information from one session to another.

    * ChangeLog
    * src/first-time.c
    * src/gpredict-utils.c
    * src/gpredict-utils.h
    * src/mod-cfg.c
    * src/qth-data.c
    * src/radio-conf.c
    * src/rotor-conf.c
    * src/sat-cfg.c
    * src/tle-update.c
    Unifies saving glib key file routine into one place instead of eight.

2011-09-21 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Corrects satellite name not being updated correctly when a satellite occurs with international ID and name in same update.

    * ChangeLog
    * src/tle-update.c
    Corrects satellite status not being updated correctly when a .sat and update data have different status.


2011-09-20 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/sgpsdp/sgp_in.c
    * src/tle-update.c
    * src/gtk-sat-data.c
    Eliminate segfaults for some .sat file corruption.


2011-09-19 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Process bare tle's based on checksums.


2011-09-18 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Speed up tle-update by updating the gui less frequently.


2011-09-18 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/qth-data.c