@@ -84,6 +84,8 @@
 #define MOD_CFG_LIST_SECTION   "LIST"
 #define MOD_CFG_LIST_COLUMNS   "COLUMNS"
 #define MOD_CFG_LIST_REFRESH   "REFRESH"
+#define MOD_CFG_LIST_SORT_COLUMN "SORT_COLUMN"
+#define MOD_CFG_LIST_SORT_ORDER "SORT_ORDER"
 
 /* map specific */
 #define MOD_CFG_MAP_SECTION          "MAP"
